--- a/package.json
+++ b/package.json
@@ -17,20 +17,33 @@
 		"test:watch": "jest --watch",
 		"test:cov": "jest --coverage",
 		"test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-		"test:e2e": "jest --config ./test/jest-e2e.json"
+		"test:e2e": "jest --config ./test/jest-e2e.json",
+		"typeorm": "ts-node ./node_modules/typeorm/cli",
+		"migration:run": "npm run typeorm migration:run -- -d src/data-source.ts",
+		"migration:generate": "npm run typeorm -- -d src/data-source.ts migration:generate src/migrations/$npm_config_name",
+		"migration:create": "npm run typeorm -- migration:create src/migrations/$npm_config_name",
+		"migration:revert": "npm run typeorm -- -d src/data-source.ts migration:revert"
 	},
 	"dependencies": {
+		"@nestjs/cache-manager": "^2.3.0",
 		"@nestjs/common": "^10.0.0",
 		"@nestjs/config": "^3.3.0",
 		"@nestjs/core": "^10.0.0",
+		"@nestjs/jwt": "^10.2.0",
 		"@nestjs/mapped-types": "*",
+		"@nestjs/passport": "^10.0.3",
 		"@nestjs/platform-express": "^10.0.0",
+		"@nestjs/platform-socket.io": "^10.4.15",
+		"@nestjs/throttler": "^6.3.0",
 		"@nestjs/typeorm": "^10.0.2",
+		"@nestjs/websockets": "^10.4.15",
+		"bcrypt": "^5.1.1",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.1",
 		"config": "^3.3.12",
 		"dotenv": "^16.4.7",
 		"ioredis": "^5.4.2",
+		"passport-jwt": "^4.0.1",
 		"pg": "^8.13.1",
 		"reflect-metadata": "^0.2.0",
 		"rxjs": "^7.8.1",
